# ea_conversation

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  main.py  models.py  websocket_handlers.py
app/services/: chat_service.py  tts_service.py
client/: test_client.py
documentation/: 1_product_requirements_document.md  2_system_requirements_specification.md  3_technical_design_document.md  fastapi_uvicorn_decision_note.md
tests/: conftest.py  test_chat_service.py  test_tts_service.py  test_websocket.py
