[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tts-service"
version = "0.1.0"
description = "WebSocket service that turns LLM responses into synthesized speech using OpenAI APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.29.0,<0.31.0",
    "httpx>=0.27.0,<0.28.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "tenacity>=8.2.3,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.3.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "pytest-mock>=3.12.0,<3.14.0",
    "anyio>=4.0.0,<5.0.0",
    "websockets>=12.0,<13.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: marks tests that hit the WebSocket stack",
]

[tool.setuptools.packages.find]
include = ["app*"]
